# android-agent

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
docs/: SETUP.md
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: WebBrowserWidget.vue
frontend/src/components/benchmark/: BenchmarkTab.vue
frontend/src/components/emulator/: EmulatorList.vue
frontend/src/views/: BotView.vue  ExplorerView.vue  PhoneAdminView.vue  SkillCreatorView.vue  TestsView.vue  ToolsHubView.vue  WebAgentView.vue
gitd/: app.py  cli.py  config.py  mcp_server.py
gitd/alembic/: env.py
gitd/benchmarks/: runner.py
gitd/bots/common/: adb.py  discover_rids.py  elements.py
gitd/routers/: creator.py  web.py
gitd/services/: agent_chat.py  agent_tools.py  web_context.py
gitd/skills/: __init__.py  _run_skill.py  auto_creator.py  base.py  gmail_utils.py  macro_recorder.py
gitd/skills/_base/: __init__.py
gitd/skills/_base/actions/: __init__.py  core.py
gitd/skills/_review_common/: __init__.py
gitd/skills/_review_common/actions/: __init__.py
gitd/skills/logic_reviewer/: __init__.py
gitd/skills/play_store/: __init__.py  workflows.py
gitd/skills/play_store/actions/: core.py
gitd/skills/tiktok/: __init__.py
gitd/skills/ui_ux_reviewer/: skill.yaml
gitd/tools/: tts.py  video_overlay.py
registry/: index.json
registry/_review_common/: skill.yaml
registry/_review_common/actions/: core.py
registry/logic_reviewer/: skill.yaml
registry/logic_reviewer/workflows/: __init__.py  review_logic.py
registry/ui_ux_reviewer/: __init__.py
registry/ui_ux_reviewer/workflows/: review_ui_ux.py
registry/user_app_tester/: __init__.py  skill.yaml
registry/user_app_tester/actions/: __init__.py  core.py
registry/user_app_tester/workflows/: __init__.py  test_app.py
site/src/pages/: index.astro
tests/: conftest.py  test_ollama.py  test_review_skills.py  test_web_context.py
tests/api/: conftest.py  test_web.py
(+6 files in other folders)
